--- a/hello_world/pubspec.yaml
+++ b/hello_world/pubspec.yaml
@@ -50,18 +50,18 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-flutter:
-  assets:
-    - assets/logo_polinema.png
+# flutter:
+#  assets:
+#    - assets/logo_polinema.png
 
 
 # The following section is specific to Flutter packages.
-# flutter:
+flutter:
 
 #   # The following line ensures that the Material Icons font is
 #   # included with your application, so that you can use the icons in
 #   # the material Icons class.
-#   uses-material-design: true
+    uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
